--- a/styles.css/main.css
+++ b/styles.css/main.css
@@ -1,3 +1,22 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.navbar{
+    background-color: beige;
+    width: 100%;
+    height: 5vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
 input[type="radio"] {
     display: none;
 }
@@ -7,7 +26,6 @@ label {
     padding: 8px 12px;
     background: #ddd;
     border-radius: 4px;
-    margin-right: 10px;
 }
 
 input[type="radio"]:checked + label {
@@ -15,14 +33,21 @@ input[type="radio"]:checked + label {
 }
 
 .app-frame {
-    width: 100%;
-    height: 400px;
+    width: 70%;
+    height: 60vh;
+    overflow: auto;
     border: none;
     display: none;
 }
 
-#app1:checked ~ #frame1,
+body:has(#app1:checked) #frame1,
+body:has(#app2:checked) #frame2,
+body:has(#app3:checked) #frame3{
+    display: block;
+}
+
+/* #app1:checked  ~ #frame1,
 #app2:checked ~ #frame2,
 #app3:checked ~ #frame3 {
 display: block;
-}
+} */
