--- a/styles.css/main.css
+++ b/styles.css/main.css
@@ -79,6 +79,8 @@ input[type="radio"]:checked + label {
 .x-label{
     background-color: rgb(253, 78, 78);
     color: #ffffff;
+    width: 50px;
+    height: 50px;
 }
 .x-label:hover{
     background-color: red;
